package utils;

public class Config {
    public static final int BLOCK_SIZE = 30; // ขนาดของบล็อกในเกม
    public static final int N_BLOCKS = 20; // จำนวนบล็อกทั้งหมดในแนวนอนหรือแนวตั้ง

    public static final int SCREEN_SIZE = 600; // ขนาดหน้าจอของเกม
    public static final String STAR_IMAGE_PATH = "/star.png"; // ที่อยู่ของรูปผัก
    public static boolean isFirstTime = true;
}
